fix DateInput content overflow style

--- a/packages/circuit-ui/components/DateInput/DateInput.module.css
+++ b/packages/circuit-ui/components/DateInput/DateInput.module.css
@@ -109,7 +109,6 @@
 
 .content {
   padding: 0;
-  overflow: unset;
 }
 
 .header {
